--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,27 +1,23 @@
-<button (click)="addProduct()">add product</button>
+
+
+<button (click)="addProduct()" type="button" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">
+  Add Product
+</button>
+
 {{ productCount() }}
-@for (item of products(); track item.name) {
-  <li> {{ item.name }} </li>
-} @empty {
-  <li> There are no items. </li>
-}
-<br /><br /><br /><br /><br /><br />
-<!-- app.component.html -->
-<div class="container mx-auto mt-10">
-  <ul class="space-y-4 list-none">
+
+
+<div class="p-8">
+  <div class="mb-2 text-lg font-semibold text-gray-900 dark:text-black">Password requirements:</div>
+  <ul class="max-w-md space-y-1 text-gray-500 list-disc list-inside dark:text-gray-400">
     @for (product of products(); track product.id) {
-      <li class="bg-white border border-gray-200 rounded-lg shadow-md hover:shadow-lg transition-shadow duration-200 ease-in-out p-4 flex items-center justify-between">
-        <div class="flex items-center">
-          <div class="text-lg font-semibold">{{ product.name }}</div>
-        </div>
-        <div class="text-sm font-medium text-gray-600">
-          ID: {{ product.id }}
-        </div>
+      <li>
+        {{ product.name }}
       </li>
     } @empty {
-      <div class="flex items-center">
-        <div class="text-lg font-semibold">There are no items</div>
-      </div>
+      <li>
+        no data
+      </li>
     }
   </ul>
 </div>
