add product manager component for the S in Solid

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,23 +1,1 @@
-
-
-<button (click)="addProduct()" type="button" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">
-  Add Product
-</button>
-
-{{ productCount() }}
-
-
-<div class="p-8">
-  <div class="mb-2 text-lg font-semibold text-gray-900 dark:text-black">Password requirements:</div>
-  <ul class="max-w-md space-y-1 text-gray-500 list-disc list-inside dark:text-gray-400">
-    @for (product of products(); track product.id) {
-      <li>
-        {{ product.name }}
-      </li>
-    } @empty {
-      <li>
-        no data
-      </li>
-    }
-  </ul>
-</div>
+<app-product-manager></app-product-manager>
