using the product list as an input (a signal input), and assigining the value from the parent app component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
-<app-product-manager></app-product-manager>
+<h2 class="p-4">Initial Product List Count {{initialProductList?.length}}</h2>
+
+<app-product-manager
+  [productList]="initialProductList"
+></app-product-manager>
+
