cleaning, organizing files and renaming Product interface to ProductModel, which is the same as saying Product

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<h2 class="p-4">Initial Product List Count {{initialProductList?.length}}</h2>
+<h2 class="p-4">Initial ProductModel List Count {{initialProductList?.length}}</h2>
 
 <app-product-manager
   [productList]="initialProductList"
