--- a/src/app/product-manager/product-manager.component.html
+++ b/src/app/product-manager/product-manager.component.html
@@ -1,11 +1,8 @@
 <button (click)="addProduct()" type="button"
         class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">
-  Add Product
+  Add ProductModel
 </button>
-
 {{ productCount() }}
-
-
 <div class="p-8">
   <div class="mb-2 text-lg font-semibold text-gray-900 dark:text-black">Password requirements:</div>
   <ul class="max-w-md space-y-1 text-gray-500 list-disc list-inside dark:text-gray-400">
@@ -14,14 +11,14 @@
         {{ product.name }}&nbsp;&nbsp;
         <button (click)="removeProduct(product.id)" type="button"
                 class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">
-          Remove Product
+          Remove ProductModel
         </button>
       </li>
     } @empty {
       <li>
         no data
         <button type="button" class="py-2.5 px-5 me-2 mb-2 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-100 dark:focus:ring-gray-700 dark:bg-white dark:text-gray-400 dark:border-gray-300 dark:hover:text-white dark:hover:bg-gray-700">
-          Remove Product</button>
+          Remove ProductModel</button>
       </li>
     }
   </ul>
