--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <h2 class="p-4">Initial ProductModel List Count {{initialProductList?.length}}</h2>
-
+<h1>Hello</h1>
 <app-product-manager
   [productList]="initialProductList"
 ></app-product-manager>
