--- a/src/app/item-container/item-manager/item-manager.component.html
+++ b/src/app/item-container/item-manager/item-manager.component.html
@@ -2,3 +2,25 @@
   Add Item
 </button>
 {{ itemCount() }}
+<div class="p-8">
+  <div class="mb-2 text-lg font-semibold text-gray-900 dark:text-black">
+    Item List
+  </div>
+  <ul class="max-w-md space-y-1 text-gray-500 list-disc list-inside dark:text-gray-400">
+    @for (item of items(); track item.id) {
+      <li>
+        {{ item.name }}
+        <button (click)="removeItem(item.id)" type="button" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full">
+          Remove Item
+        </button>
+      </li>
+    } @empty {
+      <li>
+        No Items
+        <button type="button" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full">
+          Remove Item
+        </button>
+      </li>
+    }
+  </ul>
+</div>
